log/build_2022-03-21_11-48-31/rc_data_emulator/stderr.log
  File "/home/nayab/dev_ws/install/rc_data_emulator/lib/python3.8/site-packages/rc_data_emulator/rc_data_emu.py", line 83
    def abort_cmd_callback(self,msg):
    ^
SyntaxError: invalid syntax

